Fixed letters overlapping in quote section.

--- a/styles.css
+++ b/styles.css
@@ -125,6 +125,8 @@ body {
     height: 300px;
     width: auto;
     flex-flow: column wrap;
+    flex: 1;
+    padding: 58px;
 }
 
 .quote .text {
